# github-repo-teaching-assistant

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
.claude/commands/: generate-blueprint.md  generate-curriculum.md  generate-examples.md  generate-kyu.md  generate-lesson.md  generate-mcq.md  next-lesson.md
.github/: CONTRIBUTING.md
.github/workflows/: sync-upstream.yml
input/: infer-actively-pymdp-8a5edab282632443.txt
src/: terminal_interface.py
training/infer-actively-pymdp-8a5edab282632443/: curriculum.md
training/infer-actively-pymdp-8a5edab282632443/lessons/lesson_1/: blueprint.md  examples.json  lesson.md  mcq.json
training/infer-actively-pymdp-8a5edab282632443/lessons/lesson_2/: blueprint.md  examples.json  lesson.md  mcq.json
training/infer-actively-pymdp-8a5edab282632443/lessons/lesson_3/: blueprint.md  examples.json  lesson.md  mcq.json
training/infer-actively-pymdp-8a5edab282632443/lessons/lesson_4/: blueprint.md  examples.json  lesson.md  mcq.json
training/infer-actively-pymdp-8a5edab282632443/lessons/lesson_5/: blueprint.md  examples.json  lesson.md  mcq.json
training/infer-actively-pymdp-8a5edab282632443/results/: lesson_0_background.json  lesson_1_results.json  lesson_2_results.json  lesson_3_results.json  lesson_4_results.json
